@@ -1,5 +1,9 @@
 2001-08-27  Sam Steingold  <sds@gnu.org>
 
+	* makemake.in (testsuite): add on all platforms
+
+2001-08-27  Sam Steingold  <sds@gnu.org>
+
 	win32gcc names libraries libFOO.a and not FOO.LISP
 	* makemake.in (LIB_TYPE): new variable, used instead of $HOS
 	in creating library dependecies
